cmake_minimum_required(VERSION 3.10)
project(devprocess)

set(CMAKE_CXX_STANDARD 17)
add_subdirectory(lib/googletest-master)
include_directories(lib/googletest-master/googletest/include)
include_directories(lib/googletest-master/googlemock/include)
include_directories(Kaata-RomanNumerals/include)
set(SOURCE_FILES main.cpp Kaata-RomanNumerals/Tests/test.cpp Kaata-RomanNumerals/include/DecimalToRoman.h Kaata-RomanNumerals/src/DecimalToRoman.cpp)
add_executable(devprocess ${SOURCE_FILES} Kaata-RomanNumerals/Tests/test.cpp)
target_link_libraries(devprocess gtest gtest_main)