cmake_minimum_required(VERSION 3.10)
project(Kaata-RomanNumerals)

set(CMAKE_CXX_STANDARD 17)
add_subdirectory(lib/googletest-master)
include_directories(lib/googletest-master/googletest/include)
include_directories(lib/googletest-master/googlemock/include)
include_directories(include)
set(SOURCE_FILES Tests/test.cpp include/DecimalToRoman.h src/DecimalToRoman.cpp)
add_executable(Kaata-RomanNumerals ${SOURCE_FILES} Tests/test.cpp)
target_link_libraries(Kaata-RomanNumerals gtest gtest_main)
