cmake_minimum_required(VERSION 3.10)
project(Kaata-TicTacToe)

set(CMAKE_CXX_STANDARD 17)
add_subdirectory(lib/googletest-master)
include_directories(lib/googletest-master/googletest/include)
include_directories(lib/googletest-master/googlemock/include)
include_directories(include)
set(SOURCE_FILES Tests/test.cpp include/TicTacToe.h src/TicTacToe.cpp)
add_executable(Kaata-TicTacToe ${SOURCE_FILES} Tests/test.cpp)
target_link_libraries(Kaata-TicTacToe gtest gtest_main)
